# C-Projec

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
data/sample_docs/: company_policy.md  onboarding_guide.md  product_handbook.md
docs/: DEPLOYMENT.md  RAG_LEARNING_NOTES.md
src/: __init__.py
src/rag/: __init__.py  chain.py  config.py  index.py  loaders.py  prompts.py
tests/: test_loaders.py  test_prompts.py
