[project]
name = "enterprise-rag-assistant"
version = "0.1.0"
description = "A Streamlit and LangChain RAG demo for an enterprise knowledge base assistant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.35",
  "langchain>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-chroma>=0.1.4",
  "langchain-text-splitters>=0.3.0",
  "chromadb>=0.5.0",
  "python-dotenv>=1.0.1",
  "pypdf>=4.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
